Correct logic errors